// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pre: Component should render children when passed in 1`] = `
<pre
  style={
    Object {
      "fontFamily": "Hack, monospace",
      "fontSize": "18px",
    }
  }
>
  Short paragraph
</pre>
`;

exports[`Pre: Component should render correctly 1`] = `
<pre
  style={
    Object {
      "fontFamily": "Hack, monospace",
      "fontSize": "18px",
    }
  }
/>
`;

exports[`Pre: Component should render with attributes 1`] = `
<pre
  id="test-id"
  style={
    Object {
      "fontFamily": "Hack, monospace",
      "fontSize": "18px",
    }
  }
  title="test title"
>
  Pre tag with attributes
</pre>
`;

exports[`Pre: Component should render with custom styles 1`] = `
<pre
  style={
    Object {
      "color": "blue",
      "fontFamily": "Hack, monospace",
      "fontSize": "18px",
    }
  }
>
  Paragraph with custom styles
</pre>
`;

exports[`Pre: Component should render with custom theme 1`] = `
<pre
  style={
    Object {
      "color": "gray",
      "fontFamily": "sans-serif",
      "fontSize": "18px",
      "size": "100px",
    }
  }
>
  Pre tag with custom theme
</pre>
`;

exports[`Pre: Component should render with overwritten styles 1`] = `
<pre
  style={
    Object {
      "color": "blue",
      "fontSize": "10px",
    }
  }
>
  Pre tag with overwritten styles
</pre>
`;
